welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:28: error: not found: value prendreBiscuit
    prendreBiscuit();
    ^