welcome.lessons.welcome.summative.Moria.scala.code
def resoudre() {
   gauche()
   gauche()
  
   while (allerChercher()) {
     gauche();
     gauche();
     allerPoser();
     gauche();
     gauche();
     avance();
   }
  
  /*
  droite()
  avance()
  gauche()
  avance()
  */
}


def allerChercher():Boolean = {
  while (!estSurBiscuit() && !estFaceMur()) {
    avance();
  }
  if (estSurBiscuit()) {
    prendreBiscuit();
    return true;
  } else {
    return false
  }
  
}
  
def allerPoser() {
  while (! estSurBiscuit()) {
    avance();
  }
  recule();
  poseBiscuit();
}
  
  

resoudre()

